# bank-widget

./: .coverage  .env.example  .flake8  .gitignore  LICENSE  README.md  constans.py  constants.py  main.py  main_for_tests.py  pyproject.toml
for_tests/: for_test_masks.py  for_test_widget.py
htmlcov/: class_index.html  constants_py.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: data_loader.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_data_loader.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils_and_external_api.py  test_widget.py
