[tool.poetry]
name = "bank-widget"
version = "0.1.0"
description = ""
authors = ["Yulianna <89673838388@mail.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2.33.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = ">=7.3.0,<8.0.0"
black = ">=26.3.1,<27.0.0"
isort = ">=8.0.1,<9.0.0"
mypy = ">=1.20.0,<2.0.0"

[tool.black]
line-length = 119
exclude = [".git/", ".venv"]

[tool.isort]
line_length = 119
exclude = ["venv"]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ["venv"]
