[tool.poetry]
name = "bank-widget"
version = "0.1.0"
description = "Серверная часть виджета банковских операций"
authors = ["Yulianna <89673838388@mail.ru>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2.33.1,<3.0.0"
pandas = ">=2.3.3,<2.4.0"
openpyxl = "^3.1.5"
pandas-stubs = "<=2.0.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
datetime = "^6.0"
isort = "^8.0.1"
flake8 = "^7.3.0"
flake8-bugbear = "^25.11.29"

[tool.poetry.group.lint.dependencies]
flake8 = ">=7.3.0,<8.0.0"
black = ">=26.3.1,<27.0.0"
isort = ">=8.0.1,<9.0.0"
mypy = ">=1.20.0,<2.0.0"

[tool.black]
line-length = 119
exclude = ".git/|.venv"
target-version = ["py310"]

[tool.isort]
line_length = 119
force_single_line = true
float_to_top = true
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ["venv"]
